# hotel-booking-site

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.Dockerfile
app/: __init__.py  config.py  extensions.py
app/blueprints/: __init__.py  models.py
app/blueprints/auth/: __init__.py  auth_views.py  employee_model.py
app/blueprints/auth/repositories/: auth_redis_repo.py
app/blueprints/auth/services/: auth_services.py  validators.py
app/blueprints/auth/templates/: login.html
app/blueprints/frontdesk/: __init__.py  frondesk_views.py
app/blueprints/frontdesk/repositories/: front_redis_repository.py  table_repository.py
app/blueprints/frontdesk/services/: overview_services.py  validators.py
app/blueprints/frontdesk/templates/: guests.html  index.html  view_guest.html
app/blueprints/public/: __init__.py  public_views.py
app/blueprints/public/templates/: about.html  contact.html  landing_page.html
app/blueprints/reservation/: __init__.py  rooms_views.py
app/blueprints/templates/: base.html  error_base.html
app/blueprints/utils/: validators.py
app/configs/: flask_configs.py  login_manager_config.py
app/src/: main.css
app/static/: style.css
app/static/scripts/: checkout.js  home.js
db/: 01-init.sh
sql/: bookingtbl.sql  childrentbl.sql  customertbl.sql  employeetbl.sql  insert_room_types.sql  promotbl.sql  roombookingtbl.sql  roomstbl.sql  roomtypestbl.sql  tbls1.sql  tbls2.sql  tbls3.sql  tbls4.sql
sql/select/: reservation_details.sql
(+23 files in other folders)
