[project]
name = "hotel-form"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-bcrypt>=1.0.1",
    "flask-cors>=6.0.1",
    "flask-login>=0.6.3",
    "flask-migrate>=4.1.0",
    "flask-session>=0.8.0",
    "psycopg>=3.2.9",
    "redis>=6.2.0",
    "uuid>=1.30",
]
